[package]
name = "rust-branching-demo"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
sqlx = {version = "0.7", features = ["runtime-tokio", "tls-native-tls", "macros", "postgres", "migrate", "chrono", "json"] }
chrono = "0.4"
anyhow = "1.0"
dotenvy = "0.15"
